--- a/index.html
+++ b/index.html
@@ -10,6 +10,41 @@
     <title>Document</title>
 
 </head>
+<body style="background-color: green;">
+<header>   
+    <h1>Header</h1>
+   <nav></nav>
+</header>
+    <main></main>
+    <section class=container-section-promo>
+        <video controls ></video>
+        <article class="item-article">
+
+        </article>
+    </section>
+
+</body>
+</html>
+
+
+
+
+
+
+
+<!--
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+
+</head>
 <body>
 <header>   
     <h1></h1>
@@ -43,3 +78,5 @@
 </body>
 </html>
 
+
+-->
