--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 </header>
     <main></main>
     <section class=container-section-promo>
-        <video controls ></video>
+        <section>
+            <video controls  >
+                <source
+                type="video/mp4"                "
+                src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+                > 
+
         <article class="item-article">
 
         </article>
