--- a/index.html
+++ b/index.html
@@ -10,17 +10,79 @@
     <title>Document</title>
 
 </head>
-<body>
+<body style="background-color:royalblue;">
 <header>   
+    <h1>Header</h1>
    <nav></nav>
 </header>
     <main></main>
-<section>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-</section>
-<footer></footer>
+    <section class=container-section-promo>
+        <section>
+            <video controls  >
+                <source
+                type="video/mp4"                "
+                src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+                > 
+
+        <article class="item-article">
+
+        </article>
+    </section>
+
+</body>
+</html>
+
+
+
+
+
+
+
+<!--
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+
+</head>
+<body>
+<header>   
+    <h1></h1>
+   <nav></nav>
+</header>
+    <main>
+        <section>
+            <video src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"></video>
+            <video controls  >
+                <source
+                type="video/mp4"                "
+                src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+                > 
+
+            </video>
+            <iframe width="420" height="315"
+                scr="https://www.youtube.com/embed/tgbNymZ7vqY"
+            >
+            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
+
+        </section>
+    </main>
+
+    <footer></footer>
 
 
 </body>
 </html>
 
+
+-->
