--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <main></main>
     <section class=container-section-promo>
         <section>
-            <video controls  >
+            <video controls 
+            poster="https://avatars.sched.co/2/e5/7859715/avatar.jpg" >
                 <source
-                type="video/mp4"                "
+                type="video/mp4"                
                 src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
                 > 
-
+            </video>
         <article class="item-article">
 
         </article>
