--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <title>Document</title>
 
 </head>
-<body style="background-color: green;">
+<body style="background-color:royalblue;">
 <header>   
     <h1>Header</h1>
    <nav></nav>
 </header>
     <main></main>
     <section class=container-section-promo>
-        <video controls ></video>
+        <section>
+            <video controls 
+            poster="https://avatars.sched.co/2/e5/7859715/avatar.jpg" >
+                <source
+                type="video/mp4"                
+                src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+                > 
+            </video>
         <article class="item-article">
 
         </article>
