--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
             </video>
         <article class="item-article">
 
+            <h3>PLet’s face it.
+                Your blog stinks.</h3>
+            <p>Blog better with the first all-in-one blogging tool for growing ecommerce brands. Connect your blog, create and optimize blog posts for each stage of the buyer’s journey, and measure the results.</p>
+            <form>
+                <p>Start publishing today:</p>
+                <div>
+                  <input type="text" placeholder="Enter email" />
+                  <button>Start My Trial</button>
+                </div>
+              </form>
         </article>
     </section>
 
