--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body style="background-color:royalblue;">
 <header>   
-    <h1>Header</h1>
+    <h1>Matcha</h1>
    <nav></nav>
 </header>
     <main></main>
@@ -27,14 +27,26 @@
             </video>
         <article class="item-article">
 
-            <h3>PLet’s face it.
+            <h3>Let’s face it.
                 Your blog stinks.</h3>
             <p>Blog better with the first all-in-one blogging tool for growing ecommerce brands. Connect your blog, create and optimize blog posts for each stage of the buyer’s journey, and measure the results.</p>
             <form>
                 <p>Start publishing today:</p>
                 <div>
                   <input type="text" placeholder="Enter email" />
-                  <button>Start My Trial</button>
+                  <button type="submit">Start My Trial</button>
+                </div>
+              </form>
+        </article>
+        <article class="item-article">
+
+            <h3>SUBSCRIBE</h3>
+            <p>Get the latest tips and trends for ecommerce marketing with the weekly Morning Matcha.</p>
+            <form>
+                <p>Contact:</p>
+                <div>
+                  <input type="text" placeholder="Enter email" />
+                  <button type="submit" class="btn btn-primary">Start My Subscription</button>
                 </div>
               </form>
         </article>
